# Search_query_handler

./: .clang-format  .gitattributes  CMakeLists.txt  main.cpp
.github/workflows/: codeql.yml
include/: Lot.h  Tokenizer.h  relevanceProcessor.h
src/: Lot.cpp  Tokenizer.cpp  relevanceProcessor.cpp
tools/: setup.h
